--- a/2.Android and Model-View-Controller/GeoQuiz/app/src/main/AndroidManifest.xml
+++ b/2.Android and Model-View-Controller/GeoQuiz/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
           package="com.only.dawns.geoquiz">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -12,10 +12,12 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name=".QuizActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".CheatActivity">
         </activity>
     </application>
 
